Added Analytics Section to Index Updated request's

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		</div>
 		<div class="content message-box-1 box-padding">
 			<div class="small-12 medium-10 large-7 columns small-centered align-center">
-				<h1>Better User Engangment</h1>
+				<h1>Better User Engagement</h1>
 				<p>Web notifications had outperformed email marketting with opt-in rate upto 25%</p>
 			</div>
 			<div class="small-10 medium-8 large-6 columns small-centered  notification-demo">
@@ -91,7 +91,6 @@
 						<div class="browser safari"></div>
 						<div class="browser opera"></div>
 					</div>
-					<p>Based on Latest HTML5 Notification</p>
 				</div>
 				<div class="small-12 medium-6 large-6 columns small-centered medium-uncentered align-center">
 					<h2>Push Notification</h2>
@@ -99,11 +98,11 @@
 							<div class="browser safari"></div>
 							<div class="plus">+</div>
 							<div class="text">
-								<h3>Malveriks</h3>
-								<p>and Higher OS</p>
+								<div class="browser chrome inactive"></div>
+								<div class="browser firefox inactive"></div>
+								<p>Coming Soon</p>
 							</div>
 						</div>
-					<p>Based on Apple's Push Notification</p>
 				</div>
 			</div>
 		</div>
@@ -126,7 +125,7 @@
 							<li class="bullet-item">Custom Icon</li> 
 							<li class="bullet-item">Unlimited Devices</li> 
 							<li class="bullet-item">API Access</li>
-							<li class="cta-button"><a class="button" href="#">Buy Now</a></li> 
+							<li class="cta-button"><a class="button round" href="#">Sign UP</a></li> 
 						</ul>						
 					</div>
 					<!-- Pricing 1 -->
@@ -143,7 +142,7 @@
 							<li class="bullet-item">API Access</li>
 							<li class="bullet-item">&nbsp;</li>
 							<li class="bullet-item">&nbsp;</li>
-							<li class="cta-button"><a class="button" href="#">Buy Now</a></li> 
+							<li class="cta-button"><a class="button round" href="#">Sign UP</a></li> 
 						</ul>						
 					</div>
 					<!-- Pricing 2 -->
@@ -163,7 +162,7 @@
 							<li class="bullet-item">&nbsp;</li>
 							<li class="bullet-item">&nbsp;</li>
 							<li class="bullet-item">&nbsp;</li>
-							<li class="cta-button"><a class="button" href="#">Buy Now</a></li> 
+							<li class="cta-button"><a class="button round" href="#">Sign UP</a></li> 
 						</ul>
 					</div>
 					<!-- Pricing 1 -->
@@ -180,7 +179,7 @@
 							<li class="bullet-item">&nbsp;</li>
 							<li class="bullet-item">&nbsp;</li> 
 							<li class="bullet-item">&nbsp;</li>
-							<li class="cta-button"><a class="button" href="#">Buy Now</a></li> 
+							<li class="cta-button"><a class="button round" href="#">Sign Up</a></li> 
 						</ul>
 					</div>
 					<!-- Pricing 2 -->
@@ -189,16 +188,53 @@
 		</div>
 	</div>
 	<div class="content message-box-2 grey-bg hide-for-small ">
-			<div class="row">
-				<form class="register-form-front">
-					<h4 class="align-center caps">Try it for Free.....!</h4>
-					<div class="large-3 medium-4 small-12 columns"><input placeholder = "http://" class="text-input" type="text"/></div>
-					<div class="large-3 medium-4 small-12 columns"><input placeholder = "Your email address" class="text-input" type="text"/></div>
-					<div class="large-3 medium-4 small-12 columns"><input placeholder = "Choose a Password" class="text-input" type="text"/></div>
-					<div class="large-3 medium-12 small-12 columns align-center"><input class=" button radius small expand" type="submit" value="Start Sending pushes" /></div>
-				</form>
+		<div class="row">
+			<form class="register-form-front">
+				<h4 class="align-center caps">Try it for Free.....!</h4>
+				<div class="large-3 medium-4 small-12 columns"><input placeholder = "http://" class="text-input" type="text"/></div>
+				<div class="large-3 medium-4 small-12 columns"><input placeholder = "Your email address" class="text-input" type="text"/></div>
+				<div class="large-3 medium-4 small-12 columns"><input placeholder = "Choose a Password" class="text-input" type="text"/></div>
+				<div class="large-3 medium-12 small-12 columns align-center"><input class=" button radius small expand" type="submit" value="Start Sending pushes" /></div>
+			</form>
+		</div>
+	</div>
+	<div class="content message-box-4 bt box-padding">
+		<div class="row">
+			<div class="small-12 columns">
+				<h2>Reach into New Worlds</h2>
+				<p>Use our Dashboard to track user engagement in both Web and Push Notifications.</p>
+			</div>
+			<div class="large-4 medium-3 small-12 columns">
+				<p>Dashboard gives an over-view of the following data at a glance</p>
+				<ul>
+					<li>Total Subscribers</li>
+					<li>Subscriptions today</li>
+					<li>Subscribers for Past 5 Days</li>
+					<li>Information on Last sent Notification</li>
+					<li>Push count/ Remaining pushes</li>
+				</ul>
+				<p>and More Analytic Information avalible in selction with more insights to understand your users and increase your site's engagement using Mobiopush.</p>
+				<a href="" class="button small">Learn More</a>
+			</div>
+			<div class="large-8 medium-9 small-12 columns"><img class="br-f" src="images/Dashboard.png" alt="Mobiopush Dashboard"></div>
+		</div>
+	</div>
+	
+	<div id="footer">
+		<div class="row">
+			<div class="small-3 medium-3 large-2 columns align-center">
+				<p>&copy; Mobiopush</p>
+			</div>
+			<div class="small-9 medium-7 large-6 columns">
+				<ul class="menu align-right">
+					<li><a href="">About</a></li>
+					<li><a href="">How it works</a></li>
+					<li><a href="">Privacy</a></li>
+					<li><a href="">Terms &amp; Conditions</a></li>
+				</ul>
 			</div>
 		</div>
+	</div>
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
