Added few more modificaitions

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<li class="bullet-item">Custom Icon</li> 
 							<li class="bullet-item">Unlimited Devices</li> 
 							<li class="bullet-item">API Access</li>
-							<li class="cta-button"><a class="button round" href="#">Sign UP</a></li> 
+							<li class="cta-button"><a class="button round small" href="#">Sign UP</a></li> 
 						</ul>						
 					</div>
 					<!-- Pricing 1 -->
@@ -142,7 +142,7 @@
 							<li class="bullet-item">API Access</li>
 							<li class="bullet-item">&nbsp;</li>
 							<li class="bullet-item">&nbsp;</li>
-							<li class="cta-button"><a class="button round" href="#">Sign UP</a></li> 
+							<li class="cta-button"><a class="button round small" href="#">Sign UP</a></li> 
 						</ul>						
 					</div>
 					<!-- Pricing 2 -->
@@ -162,7 +162,7 @@
 							<li class="bullet-item">&nbsp;</li>
 							<li class="bullet-item">&nbsp;</li>
 							<li class="bullet-item">&nbsp;</li>
-							<li class="cta-button"><a class="button round" href="#">Sign UP</a></li> 
+							<li class="cta-button"><a class="button round small" href="#">Sign UP</a></li> 
 						</ul>
 					</div>
 					<!-- Pricing 1 -->
@@ -179,7 +179,7 @@
 							<li class="bullet-item">&nbsp;</li>
 							<li class="bullet-item">&nbsp;</li> 
 							<li class="bullet-item">&nbsp;</li>
-							<li class="cta-button"><a class="button round" href="#">Sign Up</a></li> 
+							<li class="cta-button"><a class="button round small" href="#">Sign Up</a></li> 
 						</ul>
 					</div>
 					<!-- Pricing 2 -->
